--- a/portfolios.html
+++ b/portfolios.html
@@ -87,8 +87,10 @@
     <section>
         <h2>Example Visual</h2>
         <figure>
-            <img src="images/UMSI_CampusFall_UMSIBackpack_02.jpg" alt="A student wearing a UMSI backpack on campus.">
-            <figcaption>Use visuals to support your explanation and key decisions.</figcaption>
+            <img src="images/motchut-my-ho-chi-minh-city-vietnam.jpeg" alt="Used as a visual example on the portfolio guidance page.">
+            <figcaption>
+                Visuals in a portfolio should support your explanation of process, decisions, and outcomes.
+              </figcaption>
         </figure>
     </section>
 
