--- a/portfolios.html
+++ b/portfolios.html
@@ -87,7 +87,7 @@
     <section>
         <h2>Example Visual</h2>
         <figure>
-            <img src="images/motchut-my-ho-chi-minh-city-vietnam.jpeg" alt="Used as a visual example on the portfolio guidance page.">
+            <img src="images/portfolioimage.jpeg" alt="Used as a visual example on the portfolio guidance page.">
             <figcaption>
                 Visuals in a portfolio should support your explanation of process, decisions, and outcomes.
               </figcaption>
