--- a/networking.html
+++ b/networking.html
@@ -16,7 +16,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="resume.html">Resumes</a></li>
-        <li><a href="networking.html" aria-current="page">Networking &amp Connections</a></li>
+        <li><a href="networking.html" aria-current="page">Networking &amp; Connections</a></li>
         <li><a href="portfolios.html">Portfolios</a></li>
       </ul>
     </nav>
